--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "php": ">=5.4",
         "yiisoft/yii2": "*",
-		"yiisoft/yii2-jui": "*"
+		"yiisoft/yii2-jui": "*",
+		"yiisoft/yii": "*"
     },
     "require-dev": {
 
